ensure overflow of page is hidden

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -43,6 +43,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .navbar {
